--- a/webapp/i18n/i18n-en.properties
+++ b/webapp/i18n/i18n-en.properties
@@ -1,7 +1,15 @@
 # This is the resource bundle for the Ice Cream Machine app
 
 #XTIT: Application name
-title=Ice Cream Machine
+title=Management System
+
+cancel=cancel
+nextBtn=next step
+matDesc=description
+vendorDesc=vendor
+qunatity=quantity
+selectedItems = selected items
+createOrder= create order
 
 #YDES: Application description
 appDescription=App Description
