--- a/webapp/i18n/i18n-iw..properties
+++ b/webapp/i18n/i18n-iw..properties
@@ -1,7 +1,14 @@
 # This is the resource bundle for the Ice Cream Machine app
 
 #XTIT: Application name
-title=Ice Cream Machine
+title=מערכת לניהול מסעדה
+cancel=בטל
+nextBtn=שלב הבא
+matDesc=תיאור
+vendorDesc=ספק
+qunatity=כמות
+selectedItems =מוצרים שנחברו
+createOrder= צור הזמנה
 
 #YDES: Application description
 appDescription=App Description
