--- a/webapp/i18n/i18n-en.properties
+++ b/webapp/i18n/i18n-en.properties
@@ -126,3 +126,4 @@ newReviewUserCommentHint=Write your review here
 createPo=Create Purchase Order
 chooseStorageLocation=select storage location
 selectQuantity=select products
+poCreated= Purchase Orders Created
