--- a/webapp/i18n/i18n-en.properties
+++ b/webapp/i18n/i18n-en.properties
@@ -127,3 +127,4 @@ createPo=Create Purchase Order
 chooseStorageLocation=select storage location
 selectQuantity=select products
 poCreated= Purchase Orders Created
+selectStorage= select storage location
