--- a/webapp/i18n/i18n-iw..properties
+++ b/webapp/i18n/i18n-iw..properties
@@ -126,3 +126,4 @@ createPo=\u05D9\u05E6\u05D9\u05E8\u05EA \u05D4\u05D6\u05DE\u05E0\u05EA \u05E8\u0
 chooseStorageLocation=\u05D1\u05D7\u05E8 \u05DE\u05D7\u05E1\u05DF
 selectQuantity=\u05D1\u05D7\u05D9\u05E8\u05EA \u05DE\u05D5\u05E6\u05E8\u05D9\u05DD
 poCreated=הזמנות רכש נוצרו בהצלחה
+selectStorage=בחר מחסן
